tests/NormalTests/paczka1/fuzzy1/94043014.err
Error in line 6: dLTJBKY A728 24,3
Error in line 1: fdT5tRiGU A439 68,3
Error in line 10: dLTJBKY S411 10,1
Error in line 23: MhNVp S411 75,0
